# ffmpeg-extract-clips-davinci-resolve-edl

./: Cargo.toml  README.md
src/: cli.yaml  main.rs
